cleaned up formatting